--- a/template/footer.html
+++ b/template/footer.html
@@ -64,18 +64,18 @@
         <footer id="footer">
             <div class="container">
                 <div class="footer-content">
-                    <p class="footer-name">Kausik Dolui | 2023</p>
+                    <p class="footer-name">Kaushik Dolui | 2023</p>
                     <div class="footer-contact">
                         <p class="footer-email">Email: <a
                                 href="mailto:kaushikdolui4@gmail.com">kaushikdolui4@gmail.com</a></p>
                     </div>
                 </div>
                 <p class="footer-disclaimer">Disclaimer: The information contained in this footer is the property of
-                    Kausik Dolui and may be confidential. If you have received this footer in error, please notify the
+                    Kaushik Dolui and may be confidential. If you have received this footer in error, please notify the
                     sender immediately and delete it from your system. Unauthorized use, copying, or distribution of
                     this footer is strictly prohibited. The content of this footer represents the personal views and
-                    opinions of Kausik Dolui and does not necessarily reflect the views or opinions of any organizations
-                    or individuals affiliated with Kausik Dolui. Thank you.</p>
+                    opinions of Kaushik Dolui and does not necessarily reflect the views or opinions of any organizations
+                    or individuals affiliated with Kaushik Dolui. Thank you.</p>
             </div>
         </footer>
 
